parser/sample_tests/ours/switch.txt

*** Error line 9.
	Print("What is the rank of the card? (1-13)");
        ^^^^^
*** syntax error

